Update .gitignore to ignore cache_dir, outputs, and runs directories

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ data/
 # Models
 models/
 
+
 # Logs
-notebooks\ cache_dir/
-notebooks\ outputs/
-notebooks\ runs/
+notebooks/cache_dir/
+notebooks/outputs/
+notebooks/runs/
